# scorpion-defaults

./: .gitignore  Dockerfile  docker-compose.yaml  nohup.out  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
config/: config.json  default_params.json  parameters_reference.json  xip3901_parameters_reference.json
docs/: README.md
scripts/: app.sh  docker-compose.service  install.sh  run-as-service.sh  update.sh
scripts/services/: app-service-start.sh  app.service  app.sh  button.service  stats.service
src/: Home.py  __init__.py  app.py  button.py  requirements.txt  utils.py
src/arista/: api.py  session.py
src/assets/app/: style.css
src/cli/: __init__.py  cli.py  display.py  net.py  scorpion.py
src/main_tabs/: arista.py  home.py  mcms.py  scorpions.py  switches.py  xip3901.py
src/mcm/: api.py  session.py
src/network/: ping.py
src/pages/: 10_Config_Manager.py  1_Configuration.py
src/prism/: api.py  session.py
src/scorpion/: __init__.py  api.py  config.json  default.json  default.py  default_parameters.json  parameters.json  parameters.txt  session.py  utils.py
src/settings/: software.py
src/xip3901/: __init__.py  api.py  default.py  session.py  utils.py
tests/: build_params.py  fping_test.py
tmp_archive/cli/: cli.py  scorpion.py
