[project]
name = "ct-flows"
version = "0.1.0"
description = ""
authors = [{name ="cloudsupport", email=  "cloudsupport@ctus.com"}]
license = {file = "LICENSE"}
readme = "docs/README.md"

dependencies = [
    "streamlit >= 1.33.0",
    "streamlit-js-eval >= 0.1.7",
    "netaddr >= 1.2.1",
    "typer",
    "requests",
    "urllib3 < 2",
    "pydantic",
    "furl",
    "pandas",
    "ipython",
    "pyairtable",
    "python-dotenv"    
]

[tool.setuptools.packages.find]
include = ["src"] 
namespaces = false

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
flows = "src.cli:main"